<resources>
    <string name="app_name">agree_culture</string>

    <string name="label">Label</string>

    <string name="product">Product</string>
    <string name="confirm">Confirm</string>


    <string name="productDesc1">
        Quantity : %1$s\n
        Weight (kg) : %2$s\n
        Price : &#8369; %3$s\n
        Tax : %4$s\n
        Total : &#8369; %5$s
    </string>

    <string name="productDesc2">
        Quantity : %1$s\n
        Weight (kg) : %2$s\n
        Price per weight : &#8369; %3$s\n
        Tax : %4$s\n
        Total : &#8369; %5$s
    </string>

    <string name="description">Description</string>

    <string name="taxLabel">Tax</string>
    <string name="taxContent">Tax : %1$s</string>

    <string name="invalidSignIn">Invalid Email / Password</string>

    <string name="userName">User Name</string>
    <string name="address">Address</string>
    <string name="number">Number</string>

    <string name="something_went_wrong">Something went wrong.</string>

    <string name="error">Error</string>

    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>

    <string name="home">Home</string>
    <string name="products">Products</string>
    <string name="purchase_history">Purchase History</string>
    <string name="account">Account</string>

    <string name="customer">Customer</string>
    <string name="distributor">Distributor</string>
    <string name="supplier">Supplier</string>

    <string name="search">Search</string>

    <string name="update">Update</string>
    <string name="update_information">Update Information</string>

    <string name="successfully_update">Successfully Update</string>

    <string name="product_deleted">Product Deleted</string>

    <string name="successfully_delivered">Successfully delivered products</string>

    <string name="delivered_successfully">Successfully delivered products, continue to transfer products</string>
    <string name="success_product_transferred">Successfully transferred products</string>

    <string name="cancel_product">Cancel order product?</string>
    <string name="remove_product">Remove product?</string>
    <string name="cancel_order">Cancel order?</string>
    <string name="success_product_remove">Successfully canceled order</string>

    <string name="totalAmount">Total Amount</string>
    <string name="delivered">Delivered</string>

    <string name="zero">0</string>

    <string name="weight">Weight per quantity (kg)</string>

    <string name="no_initial_destination">Bought address not found</string>

    <string name="no_directions">No directions / routes can be found</string>

    <!-- Drawer Layout Nav -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Agree Culture</string>
    <string name="nav_header_subtitle">agree.culture@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_my_cart">My Cart</string>
    <string name="nav_edit_account">Edit Account</string>
    <string name="nav_logout">Logout</string>

    <string name="nav_orders">Orders</string>

    <string name="action_settings">Settings</string>


    <!-- Authentication check if user exists -->
    <string name="user_exists">Currently there is a user sign in</string>


    <!-- Main Menu -->
    <!-- Home Strings -->
    <string name="search_product_empty">Please input product to search</string>
    <string name="home_login">Login</string>
    <string name="home_logo_cont_description">Home Logo</string>
    <string name="home_search_hint">Search : Rice, Beans, and ETC.</string>
    <string name="home_button_dist">Distributor</string>
    <string name="home_button_sell">Supplier</string>
    <string name="home_button_cont_dist">Distributor</string>
    <string name="home_button_cont_sell">Supplier</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Main Menu -->
    <!-- Messages -->
    <string name="menu_messages_desc">
        <font size="18">
            <b>
                %1$s
            </b>
        </font>
        \n
        <font size="16">
            %2$s
        </font>
    </string>

    <!-- Main Menu -->
    <!-- Cart -->
    <string name="menu_cart_order">Order</string>
    <string name="menu_cart_desc">
        Quantity : %1$s\n
        Weight (kg) : %2$s\n
        Price : %3$s\n
        Total : %4$s
    </string>
    <string name="menu_car_product_plus_limit">Quantity cannot be zero or more than the product left</string>
    <string name="menu_cart_order_success">Successfully ordered products</string>
    <string name="menu_cart_confirm_order">Order products?</string>

    <!-- Main Menu -->
    <!-- Orders -->
    <string name="menu_order_success_cancel_order">Successfully cancel order</string>

    <string name="order_buyer_product_total_amount">%1$s &#8369; : %2$s</string>

    <!-- Main Menu -->
    <!-- Purchase History -->
    <string name="purchase_history_cancel_order">Cancel order for this product?</string>

    <!-- Home Alert Dialog -->
    <string name="home_photo_title">Photo</string>
    <string name="home_photo_message">Add/Change profile photo?</string>

    <!-- Home User Photo Related -->
    <string name="home_photo_upload_success">Successfully added/updated photo</string>

    <!-- Drawer Layout -->
    <string name="home_full_name">%1$s ( %2$s )</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up_link">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="login_empty">Please input email / password</string>

    <!-- sign up related -->
    <string name="sign_up_name">Full Name</string>
    <string name="sign_up_username">Email</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_confirm_password">Confirm Password</string>
    <string name="sign_up_address">Address</string>
    <string name="sign_up_city">City</string>
    <string name="sign_up_phone_number_prefix">+63</string>
    <string name="sign_up_phone_number">982384818</string>
    <string name="sign_up_string">Sign Up</string>

    <!-- Sign up Spinner items -->
    <string name="sign_up_user_type_placeholder">Choose Role</string>
    <string-array name="sign_up_user_type">
        <item>Customer - Retailer</item>
        <item>Customer - Wholesale</item>
        <item>Distributor</item>
        <item>Supplier</item>
    </string-array>

    <!-- Sign up errors message -->
    <string name="sign_up_full_name_no_text">Full name is required</string>
    <string name="sign_up_full_name_limit">Full name must be lesser than 25 characters</string>
    <string name="sign_up_email_no_text">Email is required</string>
    <string name="sign_up_email_not_valid">Must be a valid email</string>
    <string name="sign_up_email_exists">Email already exists</string>
    <string name="sign_up_password_no_text">Password is required</string>
    <string name="sign_up_password_confirmation_required">Password must be the same</string>
    <string name="sign_up_address_required">Address is required</string>
    <string name="sign_up_city_required">City is required</string>
    <string name="sign_up_phone_number_required">Phone number is required</string>
    <string name="title_activity_menu_products">MenuProducts</string>

    <string name="title_activity_products_creation">ProductsCreationActivity</string>
    <string name="title_activity_products_update">ProductsUpdateActivity</string>

    <!-- Create Product -->
    <string name="product_create_btn">Create</string>
    <string name="product_create_basic">Basic Information</string>
    <string name="product_create_name_label">Product Name</string>
    <string name="product_create_name">Product Name</string>
    <string name="product_create_transaction_details">Transaction Details</string>
    <string name="product_create_price_label">Price per kg.</string>
    <string name="product_create_price">0.00</string>
    <string name="product_create_quantity_label">Quantity</string>
    <string name="product_create_quantity">0</string>
    <string name="product_create_minimum_label">Minimum Quantity</string>
    <string name="product_create_minimun">0</string>

    <!-- Create Product Error -->
    <string name="product_create_name_error">Product name is required</string>
    <string name="product_create_number_error">%1$s must not be lesser than or equal to zero</string>
    <string name="product_create_product_photo_error">Product photo is required</string>

    <!-- Update Product -->
    <string name="product_update_disable">Disable</string>
    <string name="product_update_enable">Enable</string>
    <string name="product_update_btn">Update</string>
    <string name="product_update_success">Successfully update product</string>


    <!-- Recycler view Product List -->
    <string name="main_menu_product_delete_message">Delete this product?</string>
    <string name="main_menu_product_delete_success">Successfully deleted product.</string>
    <string name="main_menu_product_list_item"><b>PHP :</b> %1$s, \n<b>Quantity : </b>%2$s \n<b>Minimum quantity: </b>%3$s \n<b>Weight (kg.) : %4$s</b></string>
    <string name="title_activity_search_product">SearchProductActivity</string>


    <!-- product search -->
    <string name="product_search_no_available">No available product</string>
    <string name="product_search_desc_name">%1$s ( %2$s ) \n<b>Phone no. <i>%3$s</i></b></string>
    <string name="search_product_list_item"><b>PHP :</b> %1$s, \n<b>Quantity : </b>%2$s \n<b>Minimum quantity: </b>%3$s \n<b>Weight (kg.) : %4$s</b></string>


    <!-- add to orders -->
    <string name="cart_add_message">Add product to cart?</string>
    <string name="cart_add_quantity_zero">Quantity of the product is lesser than or equal to zero</string>
    <string name="card_add_success">Successfully added product to orders</string>

    <!-- add to orders error -->
    <string name="cart_add_error">Error accessing messaging app</string>
    <string name="cart_add_product_exists">Product already added to orders</string>
    <string name="title_activity_order_buyer_products">OrderBuyerProducts</string>

    <string name="title_activity_delivery_destination_map">Map</string>


    <!-- Order Buyer Product List -->
    <string name="buyer_list_quantity">Quantity %1$s</string>
    <string name="buyer_list_price">Price : </string>

    <string name="title_activity_delivery_owner_map">Map</string>

</resources>
